# quran-studio

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  quran-studio-design.md  quran-studio-prd.md  quran-studio-spec.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/migrations/: 001_initial.sql
core/src/: alignment.rs  audio.rs  error.rs  lib.rs  preview.rs  project.rs  quran_data.rs  renderer.rs  text_utils.rs  whisper.rs
core/tests/: integration_test.rs
data/: .gitignore
data/projects/: 17a97fcc-d4cc-45cc-987c-5cb5da1f8cad.json  2b10e073-5828-4814-838f-627a9aad6d22.json  e097a557-ebe6-4046-8772-770c27292d42.json
data/scripts/: build_database.py  fetch_alignments.py  fetch_audio.py  fetch_mushaf_images.py  fetch_mushaf_layouts.py  fetch_translations.py  precompute_coordinates.py  reciters.json  requirements.txt  run_pipeline.py  validate_data.py
desktop/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/e2e/: custom-audio.spec.ts  editor-workflow.spec.ts  new-modes.spec.ts  project-creation.spec.ts  web-mode.spec.ts
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
desktop/src/__tests__/: fixtures.ts  setup.ts
desktop/src/__tests__/workflows/: custom-audio.test.ts  hit-testing-interactions.test.ts  keyboard-navigation.test.ts  new-modes.test.ts  project-lifecycle.test.ts  timeline-editing.test.ts  web-mode.test.ts
desktop/src/components/CommandPalette/: CommandPalette.tsx
desktop/src/components/Inspector/: HighlightInspector.tsx  InspectorPanel.tsx  MushafPageInspector.tsx  ProjectInspector.tsx  TranslationInspector.tsx
desktop/src/components/Layout/: AppShell.tsx  TitleBar.tsx
desktop/src/components/Preview/: PreviewPanel.tsx  TransportControls.tsx
desktop/src/components/ProjectLibrary/: NewProjectDialog.tsx  ProjectCard.tsx  ProjectLibrary.tsx
desktop/src/components/ReciterBrowser/: ReciterBrowser.tsx
desktop/src/components/Timeline/: TimelineCanvas.tsx  TimelineEditor.tsx  TimelineInteraction.ts  TimelineToolbar.tsx  WaveformRenderer.ts  ZoomControl.tsx  constants.ts  index.ts  utils.ts
desktop/src/components/ui/: accordion.tsx  alert-dialog.tsx  badge.tsx  button.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  (+14 more)
desktop/src/hooks/: useKeyboardShortcuts.ts  usePlayback.ts  useTauri.ts
desktop/src/lib/: preloadProject.ts
desktop/src/stores/: appStore.ts  playheadSync.ts  timelineStore.ts
desktop/src/types/: project.ts
docs/plans/: 2026-03-25-caption-reel-longform-modes.md  2026-03-25-web-version.md
web/: Cargo.toml
web/src/: main.rs  state.rs
(+17 files in other folders)
