[workspace]
members = ["core", "desktop/src-tauri", "web"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
image = "0.25"
symphonia = { version = "0.5", features = ["all"] }
imageproc = "0.25"
ureq = { version = "2", features = ["json"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "fs"] }
whisper-rs = "0.16"
