[package]
name = "quran-studio-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
image = { workspace = true }
symphonia = { workspace = true }
imageproc = { workspace = true }
ureq = { workspace = true }
