[package]
name = "quran-studio-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
quran-studio-core = { path = "../../core" }
tauri = { version = "2", features = ["protocol-asset"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "quran_studio_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
